--- a/trees.ipynb
+++ b/trees.ipynb
@@ -47,14 +47,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kHEXmT02jKEi",
-        "outputId": "3692f5f9-d86f-43a1-e832-33e370beecdd"
+        "outputId": "c2fd9f96-7f20-493a-bf58-8f3ee41d2bbd"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive/\n"
+            "Drive already mounted at /content/drive/; to attempt to forcibly remount, call drive.mount(\"/content/drive/\", force_remount=True).\n"
           ]
         }
       ],
@@ -95,7 +95,7 @@
           "height": 317
         },
         "id": "u08tSgCSjF4-",
-        "outputId": "73f34e0a-475b-40cf-d700-7f4855e346d8"
+        "outputId": "4abf8b7e-f55a-4281-bb14-d0b4de09c77f"
       },
       "outputs": [
         {
@@ -155,7 +155,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-bda62e04-6229-41f4-910e-76b8ce293687\">\n",
+              "  <div id=\"df-9c6f2e08-65a8-4324-b0fb-6eaae7505787\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -323,7 +323,7 @@
               "</table>\n",
               "<p>5 rows × 64 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bda62e04-6229-41f4-910e-76b8ce293687')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9c6f2e08-65a8-4324-b0fb-6eaae7505787')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -374,12 +374,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-bda62e04-6229-41f4-910e-76b8ce293687 button.colab-df-convert');\n",
+              "          document.querySelector('#df-9c6f2e08-65a8-4324-b0fb-6eaae7505787 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-bda62e04-6229-41f4-910e-76b8ce293687');\n",
+              "          const element = document.querySelector('#df-9c6f2e08-65a8-4324-b0fb-6eaae7505787');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -417,7 +417,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5NGndehkjF4_",
-        "outputId": "d0774746-6657-4829-d3fc-23a6b11f6c45"
+        "outputId": "2323eaa2-e54a-454d-9947-15794f8a4c4e"
       },
       "outputs": [
         {
@@ -456,7 +456,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zA8SMFjrjF5B",
-        "outputId": "4a37b575-bd40-49d3-ae10-64327eea02cf"
+        "outputId": "35a10ab8-1188-40cd-d314-eda9377ce3f7"
       },
       "outputs": [
         {
@@ -464,7 +464,7 @@
           "name": "stdout",
           "text": [
             "Train set AUC: 1.0\n",
-            "Test set AUC: 0.5055853266165483\n"
+            "Test set AUC: 0.4994318651547124\n"
           ]
         }
       ],
@@ -897,7 +897,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "Kdp5gkT8jF5M",
         "colab": {
@@ -1140,7 +1140,7 @@
       },
       "source": [
         "The results of the second round show, that the optimal value for max_depth is 3, optimal min_impurity decrease equals 0. <br>\n",
-        "In the third round 125 and 175 will be tested as a values of min_samples_leaf."
+        "In the third round 400, 350, 300, 250 will be tested as a values of min_samples_leaf."
       ]
     },
     {
@@ -1154,20 +1154,94 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
-        "id": "nMH3nwbmjF5O"
+        "id": "nMH3nwbmjF5O",
+        "outputId": "a84d64f2-7589-4f23-b78a-fa7396d94aed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fitting 5 folds for each of 12 candidates, totalling 60 fits\n",
+            "[CV] END ......tree__max_depth=4, tree__min_samples_leaf=400; total time= 2.0min\n",
+            "[CV] END ......tree__max_depth=4, tree__min_samples_leaf=400; total time= 2.0min\n",
+            "[CV] END ......tree__max_depth=4, tree__min_samples_leaf=400; total time= 1.4min\n",
+            "[CV] END ......tree__max_depth=4, tree__min_samples_leaf=400; total time= 1.4min\n",
+            "[CV] END ......tree__max_depth=4, tree__min_samples_leaf=400; total time= 1.4min\n",
+            "[CV] END ......tree__max_depth=4, tree__min_samples_leaf=350; total time= 1.9min\n",
+            "[CV] END ......tree__max_depth=4, tree__min_samples_leaf=350; total time= 1.9min\n",
+            "[CV] END ......tree__max_depth=4, tree__min_samples_leaf=350; total time= 1.3min\n",
+            "[CV] END ......tree__max_depth=4, tree__min_samples_leaf=350; total time= 1.4min\n",
+            "[CV] END ......tree__max_depth=4, tree__min_samples_leaf=350; total time= 1.4min\n",
+            "[CV] END ......tree__max_depth=4, tree__min_samples_leaf=300; total time= 1.9min\n",
+            "[CV] END ......tree__max_depth=4, tree__min_samples_leaf=300; total time= 1.9min\n",
+            "[CV] END ......tree__max_depth=4, tree__min_samples_leaf=300; total time= 1.4min\n",
+            "[CV] END ......tree__max_depth=4, tree__min_samples_leaf=300; total time= 1.4min\n",
+            "[CV] END ......tree__max_depth=4, tree__min_samples_leaf=300; total time= 1.3min\n",
+            "[CV] END ......tree__max_depth=4, tree__min_samples_leaf=250; total time= 1.9min\n",
+            "[CV] END ......tree__max_depth=4, tree__min_samples_leaf=250; total time= 2.0min\n",
+            "[CV] END ......tree__max_depth=4, tree__min_samples_leaf=250; total time= 1.4min\n",
+            "[CV] END ......tree__max_depth=4, tree__min_samples_leaf=250; total time= 1.4min\n",
+            "[CV] END ......tree__max_depth=4, tree__min_samples_leaf=250; total time= 1.4min\n",
+            "[CV] END ......tree__max_depth=3, tree__min_samples_leaf=400; total time= 2.0min\n",
+            "[CV] END ......tree__max_depth=3, tree__min_samples_leaf=400; total time= 1.9min\n",
+            "[CV] END ......tree__max_depth=3, tree__min_samples_leaf=400; total time= 1.5min\n",
+            "[CV] END ......tree__max_depth=3, tree__min_samples_leaf=400; total time= 1.4min\n",
+            "[CV] END ......tree__max_depth=3, tree__min_samples_leaf=400; total time= 1.4min\n",
+            "[CV] END ......tree__max_depth=3, tree__min_samples_leaf=350; total time= 1.9min\n",
+            "[CV] END ......tree__max_depth=3, tree__min_samples_leaf=350; total time= 1.9min\n",
+            "[CV] END ......tree__max_depth=3, tree__min_samples_leaf=350; total time= 1.4min\n",
+            "[CV] END ......tree__max_depth=3, tree__min_samples_leaf=350; total time= 1.4min\n",
+            "[CV] END ......tree__max_depth=3, tree__min_samples_leaf=350; total time= 1.5min\n",
+            "[CV] END ......tree__max_depth=3, tree__min_samples_leaf=300; total time= 1.9min\n",
+            "[CV] END ......tree__max_depth=3, tree__min_samples_leaf=300; total time= 1.9min\n",
+            "[CV] END ......tree__max_depth=3, tree__min_samples_leaf=300; total time= 1.4min\n",
+            "[CV] END ......tree__max_depth=3, tree__min_samples_leaf=300; total time= 1.4min\n",
+            "[CV] END ......tree__max_depth=3, tree__min_samples_leaf=300; total time= 1.4min\n",
+            "[CV] END ......tree__max_depth=3, tree__min_samples_leaf=250; total time= 1.9min\n",
+            "[CV] END ......tree__max_depth=3, tree__min_samples_leaf=250; total time= 1.9min\n",
+            "[CV] END ......tree__max_depth=3, tree__min_samples_leaf=250; total time= 1.4min\n",
+            "[CV] END ......tree__max_depth=3, tree__min_samples_leaf=250; total time= 1.4min\n",
+            "[CV] END ......tree__max_depth=3, tree__min_samples_leaf=250; total time= 1.4min\n",
+            "[CV] END ......tree__max_depth=2, tree__min_samples_leaf=400; total time= 1.9min\n",
+            "[CV] END ......tree__max_depth=2, tree__min_samples_leaf=400; total time= 1.8min\n",
+            "[CV] END ......tree__max_depth=2, tree__min_samples_leaf=400; total time= 1.4min\n",
+            "[CV] END ......tree__max_depth=2, tree__min_samples_leaf=400; total time= 1.4min\n",
+            "[CV] END ......tree__max_depth=2, tree__min_samples_leaf=400; total time= 1.4min\n",
+            "[CV] END ......tree__max_depth=2, tree__min_samples_leaf=350; total time= 1.9min\n",
+            "[CV] END ......tree__max_depth=2, tree__min_samples_leaf=350; total time= 1.7min\n",
+            "[CV] END ......tree__max_depth=2, tree__min_samples_leaf=350; total time= 1.3min\n",
+            "[CV] END ......tree__max_depth=2, tree__min_samples_leaf=350; total time= 1.4min\n",
+            "[CV] END ......tree__max_depth=2, tree__min_samples_leaf=350; total time= 1.4min\n",
+            "[CV] END ......tree__max_depth=2, tree__min_samples_leaf=300; total time= 1.9min\n",
+            "[CV] END ......tree__max_depth=2, tree__min_samples_leaf=300; total time= 1.9min\n",
+            "[CV] END ......tree__max_depth=2, tree__min_samples_leaf=300; total time= 1.3min\n",
+            "[CV] END ......tree__max_depth=2, tree__min_samples_leaf=300; total time= 1.4min\n",
+            "[CV] END ......tree__max_depth=2, tree__min_samples_leaf=300; total time= 1.4min\n",
+            "[CV] END ......tree__max_depth=2, tree__min_samples_leaf=250; total time= 1.9min\n",
+            "[CV] END ......tree__max_depth=2, tree__min_samples_leaf=250; total time= 1.9min\n",
+            "[CV] END ......tree__max_depth=2, tree__min_samples_leaf=250; total time= 1.4min\n",
+            "[CV] END ......tree__max_depth=2, tree__min_samples_leaf=250; total time= 1.4min\n",
+            "[CV] END ......tree__max_depth=2, tree__min_samples_leaf=250; total time= 1.4min\n",
+            "Best score:  0.5767857044559788\n",
+            "Best params:  {'tree__max_depth': 3, 'tree__min_samples_leaf': 300}\n"
+          ]
+        }
+      ],
       "source": [
         "param_grid = {\n",
         "    'tree__max_depth': [4, 3, 2],\n",
         "    'tree__min_samples_leaf': [400, 350, 300, 250]\n",
         "}\n",
         "\n",
-        "grid = GridSearchCV(pipe, param_grid, cv=10,\n",
+        "grid = GridSearchCV(pipe, param_grid, cv=5,\n",
         "                    scoring='roc_auc',\n",
-        "                    verbose=1)\n",
+        "                    verbose=2)\n",
         "\n",
         "grid.fit(X_train_dummies, y_train)\n",
         "\n",
@@ -1181,7 +1255,7 @@
         "id": "pUKMsUE_jF5O"
       },
       "source": [
-        "The optimal values of a decision tree's parameters are max_depth=3, min_samples=175. Using these values a disicion tree on the whole dataset will be built."
+        "The optimal values of a decision tree's parameters are max_depth=3, min_samples=300. Using these values a disicion tree on the whole dataset will be built."
       ]
     },
     {
@@ -1195,25 +1269,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
-        "id": "0xTf_8b8jF5P"
+        "id": "0xTf_8b8jF5P",
+        "outputId": "fe882049-e57e-4eeb-b34f-42ff63880171",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Train set AUC: 0.5\n",
+            "Test set AUC: 0.5\n"
+          ]
+        }
+      ],
       "source": [
         "tree_final = Pipeline([\n",
         "    ('transformer', ColumnTransformer([\n",
         "        ('scaler', StandardScaler(), [*range(0, 19)])],\n",
         "         remainder='passthrough')),\n",
         "    ('imputer', KNNImputer()),\n",
-        "    ('tree', DecisionTreeClassifier(max_depth=3, min_samples_leaf=175,\n",
+        "    ('tree', DecisionTreeClassifier(max_depth=3, min_samples_leaf=300,\n",
         "                                    random_state=0))\n",
         "])\n",
         "tree_final.fit(X_train_dummies, y_train)\n",
         "\n",
         "\n",
-        "print(\"Train set AUC: {}\".format(roc_auc_score(y_train, tree_final.predict(X_train))))\n",
-        "print(\"Test set AUC: {}\".format(roc_auc_score(y_test, tree_final.predict(X_test))))"
+        "print(\"Train set AUC: {}\".format(roc_auc_score(y_train, tree_final.predict(X_train_dummies))))\n",
+        "print(\"Test set AUC: {}\".format(roc_auc_score(y_test, tree_final.predict(X_test_dummies))))"
       ]
     },
     {
