--- a/trees.ipynb
+++ b/trees.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 15,
       "metadata": {
         "id": "DIsE6ermjF45"
       },
@@ -31,6 +31,7 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.model_selection import GridSearchCV\n",
         "from sklearn.pipeline import Pipeline\n",
         "from sklearn.compose import ColumnTransformer\n",
@@ -1157,10 +1158,10 @@
       "execution_count": 12,
       "metadata": {
         "id": "nMH3nwbmjF5O",
-        "outputId": "a84d64f2-7589-4f23-b78a-fa7396d94aed",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a84d64f2-7589-4f23-b78a-fa7396d94aed"
       },
       "outputs": [
         {
@@ -1272,10 +1273,10 @@
       "execution_count": 13,
       "metadata": {
         "id": "0xTf_8b8jF5P",
-        "outputId": "fe882049-e57e-4eeb-b34f-42ff63880171",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fe882049-e57e-4eeb-b34f-42ff63880171"
       },
       "outputs": [
         {
@@ -1304,21 +1305,147 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        " AUC for both datasets is 0.5, which means that in both cases the tree predicts the negative category for all observations. At the end, the final model will be built on the whole labeled data (which for now has been splitted into a training and testing sets. So on a larger dataset we may get a larger decision tree. Moreover, the parameters values used in the tree_final were selected as the best ones during cross-validation, which means that on average (on different training and testing datasets) the tree_final model has the highest AUC among other decision trees. <br>\n",
+        " To get higher quality of predictions, more complicated models will be used."
+      ],
       "metadata": {
-        "id": "SJBVjb1ljF5P"
+        "id": "WOS4HWKgVCYd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Baseline random forest model"
+      ],
+      "metadata": {
+        "id": "SEbuA4b9V8Gd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rf_baseline = RandomForestClassifier(random_state=0)\n",
+        "rf_baseline.fit(X_train, np.ravel(y_train))\n",
+        "\n",
+        "print(\"Train set AUC: {}\".format(roc_auc_score(y_train, rf_baseline.predict(X_train))))\n",
+        "print(\"Test set AUC: {}\".format(roc_auc_score(y_test,  rf_baseline.predict(X_test))))"
+      ],
+      "metadata": {
+        "id": "oIqSIaXPWRT2",
+        "outputId": "f257d1e0-f995-45fd-818f-490eaaba004f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Train set AUC: 1.0\n",
+            "Test set AUC: 0.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "As before, we've got AUC = 1 on the training set and AUC = 0 on the test set. In order to achieve better results, GridSearchCV will be used"
+      ],
+      "metadata": {
+        "id": "S9yI4K1JXX34"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Tuning rf parameters values"
+      ],
+      "metadata": {
+        "id": "jYhfuAinXyS-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pipe = Pipeline([\n",
+        "    ('transformer', ColumnTransformer([\n",
+        "        ('scaler', StandardScaler(), [*range(0, 19)])],\n",
+        "         remainder='passthrough')),\n",
+        "    ('imputer', KNNImputer()),\n",
+        "    ('rf', RandomForestClassifier(random_state=0, n_jobs=-1))\n",
+        "])"
+      ],
+      "metadata": {
+        "id": "W5bW903AXwB0"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Round 1"
+      ],
+      "metadata": {
+        "id": "Kgf0T9G2X_N7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "param_grid = {\n",
+        "    'rf__n_estimators': [500, 250, 100],\n",
+        "    'rf__max_depth': [None, 20, 10, 5],\n",
+        "    'rf__min_samples_split': [2, 10, 50]\n",
+        "}\n",
+        "\n",
+        "grid = GridSearchCV(pipe, param_grid, cv=5,\n",
+        "                    scoring='roc_auc',\n",
+        "                    verbose=2)\n",
+        "\n",
+        "grid.fit(X_train_dummies, y_train)\n",
+        "\n",
+        "print('Best score: ', grid.best_score_)\n",
+        "print('Best params: ', grid.best_params_)"
+      ],
+      "metadata": {
+        "id": "gTchMHxsX8Js",
+        "outputId": "55e30331-13b0-4392-9ac3-6d7e295fcad9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fitting 5 folds for each of 36 candidates, totalling 180 fits\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         ""
-      ]
+      ],
+      "metadata": {
+        "id": "MYyJqjVbYy4A"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "name": "trees.ipynb",
-      "toc_visible": true,
       "provenance": [],
       "include_colab_link": true
     },
