--- a/trees.ipynb
+++ b/trees.ipynb
@@ -449,11 +449,11 @@
         "print(\"y_test.shape:\", y_test.shape)"
       ],
       "metadata": {
-        "id": "JtSl-esEZ4pd",
-        "outputId": "2dcacab1-6b13-448b-dd7f-d326122c893f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JtSl-esEZ4pd",
+        "outputId": "2dcacab1-6b13-448b-dd7f-d326122c893f"
       },
       "execution_count": 7,
       "outputs": [
@@ -1626,9 +1626,123 @@
         "print('Best params: ', grid.best_params_)"
       ],
       "metadata": {
-        "id": "MYyJqjVbYy4A"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MYyJqjVbYy4A",
+        "outputId": "155d1cc1-b62d-427f-8071-0dff241633ac"
       },
-      "execution_count": 12,
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fitting 5 folds for each of 9 candidates, totalling 45 fits\n",
+            "[CV] END .............rf__max_depth=8, rf__n_estimators=1500; total time= 1.1min\n",
+            "[CV] END .............rf__max_depth=8, rf__n_estimators=1500; total time= 1.0min\n",
+            "[CV] END .............rf__max_depth=8, rf__n_estimators=1500; total time= 1.0min\n",
+            "[CV] END .............rf__max_depth=8, rf__n_estimators=1500; total time= 1.0min\n",
+            "[CV] END .............rf__max_depth=8, rf__n_estimators=1500; total time= 1.0min\n",
+            "[CV] END .............rf__max_depth=8, rf__n_estimators=1000; total time=  51.5s\n",
+            "[CV] END .............rf__max_depth=8, rf__n_estimators=1000; total time=  51.4s\n",
+            "[CV] END .............rf__max_depth=8, rf__n_estimators=1000; total time=  50.9s\n",
+            "[CV] END .............rf__max_depth=8, rf__n_estimators=1000; total time=  49.2s\n",
+            "[CV] END .............rf__max_depth=8, rf__n_estimators=1000; total time=  49.0s\n",
+            "[CV] END ..............rf__max_depth=8, rf__n_estimators=500; total time=  43.1s\n",
+            "[CV] END ..............rf__max_depth=8, rf__n_estimators=500; total time=  40.8s\n",
+            "[CV] END ..............rf__max_depth=8, rf__n_estimators=500; total time=  38.7s\n",
+            "[CV] END ..............rf__max_depth=8, rf__n_estimators=500; total time=  40.0s\n",
+            "[CV] END ..............rf__max_depth=8, rf__n_estimators=500; total time=  38.7s\n",
+            "[CV] END .............rf__max_depth=5, rf__n_estimators=1500; total time=  51.1s\n",
+            "[CV] END .............rf__max_depth=5, rf__n_estimators=1500; total time=  52.6s\n",
+            "[CV] END .............rf__max_depth=5, rf__n_estimators=1500; total time=  49.1s\n",
+            "[CV] END .............rf__max_depth=5, rf__n_estimators=1500; total time=  48.7s\n",
+            "[CV] END .............rf__max_depth=5, rf__n_estimators=1500; total time=  50.8s\n",
+            "[CV] END .............rf__max_depth=5, rf__n_estimators=1000; total time=  43.8s\n",
+            "[CV] END .............rf__max_depth=5, rf__n_estimators=1000; total time= 1.0min\n",
+            "[CV] END .............rf__max_depth=5, rf__n_estimators=1000; total time= 1.5min\n",
+            "[CV] END .............rf__max_depth=5, rf__n_estimators=1000; total time= 1.7min\n",
+            "[CV] END .............rf__max_depth=5, rf__n_estimators=1000; total time= 2.0min\n",
+            "[CV] END ..............rf__max_depth=5, rf__n_estimators=500; total time=  55.9s\n",
+            "[CV] END ..............rf__max_depth=5, rf__n_estimators=500; total time=  57.7s\n",
+            "[CV] END ..............rf__max_depth=5, rf__n_estimators=500; total time=  47.1s\n",
+            "[CV] END ..............rf__max_depth=5, rf__n_estimators=500; total time=  50.5s\n",
+            "[CV] END ..............rf__max_depth=5, rf__n_estimators=500; total time=  38.6s\n",
+            "[CV] END .............rf__max_depth=3, rf__n_estimators=1500; total time= 1.2min\n",
+            "[CV] END .............rf__max_depth=3, rf__n_estimators=1500; total time= 1.1min\n",
+            "[CV] END .............rf__max_depth=3, rf__n_estimators=1500; total time=  43.0s\n",
+            "[CV] END .............rf__max_depth=3, rf__n_estimators=1500; total time=  41.9s\n",
+            "[CV] END .............rf__max_depth=3, rf__n_estimators=1500; total time=  41.7s\n",
+            "[CV] END .............rf__max_depth=3, rf__n_estimators=1000; total time=  44.3s\n",
+            "[CV] END .............rf__max_depth=3, rf__n_estimators=1000; total time=  39.8s\n",
+            "[CV] END .............rf__max_depth=3, rf__n_estimators=1000; total time=  38.1s\n",
+            "[CV] END .............rf__max_depth=3, rf__n_estimators=1000; total time=  39.7s\n",
+            "[CV] END .............rf__max_depth=3, rf__n_estimators=1000; total time=  39.7s\n",
+            "[CV] END ..............rf__max_depth=3, rf__n_estimators=500; total time=  35.4s\n",
+            "[CV] END ..............rf__max_depth=3, rf__n_estimators=500; total time=  34.6s\n",
+            "[CV] END ..............rf__max_depth=3, rf__n_estimators=500; total time=  32.3s\n",
+            "[CV] END ..............rf__max_depth=3, rf__n_estimators=500; total time=  33.7s\n",
+            "[CV] END ..............rf__max_depth=3, rf__n_estimators=500; total time=  32.0s\n",
+            "Best score:  0.5793882702509077\n",
+            "Best params:  {'rf__max_depth': 5, 'rf__n_estimators': 500}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Round 3"
+      ],
+      "metadata": {
+        "id": "qI_eVA4ByZPP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "param_grid = {\n",
+        "    'rf__n_estimators': [750, 500, 400],\n",
+        "    'rf__max_depth': [7, 6, 5, 4]\n",
+        "}\n",
+        "\n",
+        "grid = GridSearchCV(pipe, param_grid, cv=5,\n",
+        "                    scoring='roc_auc',\n",
+        "                    verbose=2)\n",
+        "\n",
+        "grid.fit(X_train_dummies, y_train)\n",
+        "\n",
+        "print('Best score: ', grid.best_score_)\n",
+        "print('Best params: ', grid.best_params_)"
+      ],
+      "metadata": {
+        "id": "4BelicZNk-V4",
+        "outputId": "421f308c-9699-4d50-f7d5-d181a0fe7244",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fitting 5 folds for each of 12 candidates, totalling 60 fits\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "rzzv9KFZyqbf"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ],
