--- a/trees.ipynb
+++ b/trees.ipynb
@@ -1717,19 +1717,81 @@
         "print('Best params: ', grid.best_params_)"
       ],
       "metadata": {
-        "id": "4BelicZNk-V4",
-        "outputId": "421f308c-9699-4d50-f7d5-d181a0fe7244",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4BelicZNk-V4",
+        "outputId": "421f308c-9699-4d50-f7d5-d181a0fe7244"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Fitting 5 folds for each of 12 candidates, totalling 60 fits\n"
+            "Fitting 5 folds for each of 12 candidates, totalling 60 fits\n",
+            "[CV] END ..............rf__max_depth=7, rf__n_estimators=750; total time= 1.4min\n",
+            "[CV] END ..............rf__max_depth=7, rf__n_estimators=750; total time= 1.4min\n",
+            "[CV] END ..............rf__max_depth=7, rf__n_estimators=750; total time=  54.9s\n",
+            "[CV] END ..............rf__max_depth=7, rf__n_estimators=750; total time=  42.3s\n",
+            "[CV] END ..............rf__max_depth=7, rf__n_estimators=750; total time=  40.7s\n",
+            "[CV] END ..............rf__max_depth=7, rf__n_estimators=500; total time=  40.0s\n",
+            "[CV] END ..............rf__max_depth=7, rf__n_estimators=500; total time=  41.9s\n",
+            "[CV] END ..............rf__max_depth=7, rf__n_estimators=500; total time=  37.9s\n",
+            "[CV] END ..............rf__max_depth=7, rf__n_estimators=500; total time=  36.9s\n",
+            "[CV] END ..............rf__max_depth=7, rf__n_estimators=500; total time=  38.5s\n",
+            "[CV] END ..............rf__max_depth=7, rf__n_estimators=400; total time=  37.1s\n",
+            "[CV] END ..............rf__max_depth=7, rf__n_estimators=400; total time=  36.9s\n",
+            "[CV] END ..............rf__max_depth=7, rf__n_estimators=400; total time=  35.2s\n",
+            "[CV] END ..............rf__max_depth=7, rf__n_estimators=400; total time=  36.6s\n",
+            "[CV] END ..............rf__max_depth=7, rf__n_estimators=400; total time=  35.2s\n",
+            "[CV] END ..............rf__max_depth=6, rf__n_estimators=750; total time=  43.2s\n",
+            "[CV] END ..............rf__max_depth=6, rf__n_estimators=750; total time=  43.6s\n",
+            "[CV] END ..............rf__max_depth=6, rf__n_estimators=750; total time=  39.3s\n",
+            "[CV] END ..............rf__max_depth=6, rf__n_estimators=750; total time=  39.4s\n",
+            "[CV] END ..............rf__max_depth=6, rf__n_estimators=750; total time=  56.3s\n",
+            "[CV] END ..............rf__max_depth=6, rf__n_estimators=500; total time= 1.4min\n",
+            "[CV] END ..............rf__max_depth=6, rf__n_estimators=500; total time= 1.4min\n",
+            "[CV] END ..............rf__max_depth=6, rf__n_estimators=500; total time=  53.9s\n",
+            "[CV] END ..............rf__max_depth=6, rf__n_estimators=500; total time=  53.9s\n",
+            "[CV] END ..............rf__max_depth=6, rf__n_estimators=500; total time= 1.1min\n",
+            "[CV] END ..............rf__max_depth=6, rf__n_estimators=400; total time= 1.4min\n",
+            "[CV] END ..............rf__max_depth=6, rf__n_estimators=400; total time=  54.4s\n",
+            "[CV] END ..............rf__max_depth=6, rf__n_estimators=400; total time=  42.0s\n",
+            "[CV] END ..............rf__max_depth=6, rf__n_estimators=400; total time=  37.6s\n",
+            "[CV] END ..............rf__max_depth=6, rf__n_estimators=400; total time=  36.8s\n",
+            "[CV] END ..............rf__max_depth=5, rf__n_estimators=750; total time=  57.7s\n",
+            "[CV] END ..............rf__max_depth=5, rf__n_estimators=750; total time=  45.4s\n",
+            "[CV] END ..............rf__max_depth=5, rf__n_estimators=750; total time=  42.4s\n",
+            "[CV] END ..............rf__max_depth=5, rf__n_estimators=750; total time=  48.9s\n",
+            "[CV] END ..............rf__max_depth=5, rf__n_estimators=750; total time=  38.4s\n",
+            "[CV] END ..............rf__max_depth=5, rf__n_estimators=500; total time=  36.0s\n",
+            "[CV] END ..............rf__max_depth=5, rf__n_estimators=500; total time=  35.7s\n",
+            "[CV] END ..............rf__max_depth=5, rf__n_estimators=500; total time=  36.0s\n",
+            "[CV] END ..............rf__max_depth=5, rf__n_estimators=500; total time=  33.9s\n",
+            "[CV] END ..............rf__max_depth=5, rf__n_estimators=500; total time=  33.7s\n",
+            "[CV] END ..............rf__max_depth=5, rf__n_estimators=400; total time=  34.5s\n",
+            "[CV] END ..............rf__max_depth=5, rf__n_estimators=400; total time=  36.2s\n",
+            "[CV] END ..............rf__max_depth=5, rf__n_estimators=400; total time=  32.5s\n",
+            "[CV] END ..............rf__max_depth=5, rf__n_estimators=400; total time=  32.4s\n",
+            "[CV] END ..............rf__max_depth=5, rf__n_estimators=400; total time=  32.2s\n",
+            "[CV] END ..............rf__max_depth=4, rf__n_estimators=750; total time=  39.5s\n",
+            "[CV] END ..............rf__max_depth=4, rf__n_estimators=750; total time=  37.7s\n",
+            "[CV] END ..............rf__max_depth=4, rf__n_estimators=750; total time=  35.8s\n",
+            "[CV] END ..............rf__max_depth=4, rf__n_estimators=750; total time=  37.4s\n",
+            "[CV] END ..............rf__max_depth=4, rf__n_estimators=750; total time=  35.6s\n",
+            "[CV] END ..............rf__max_depth=4, rf__n_estimators=500; total time=  34.9s\n",
+            "[CV] END ..............rf__max_depth=4, rf__n_estimators=500; total time=  34.9s\n",
+            "[CV] END ..............rf__max_depth=4, rf__n_estimators=500; total time=  34.1s\n",
+            "[CV] END ..............rf__max_depth=4, rf__n_estimators=500; total time=  32.8s\n",
+            "[CV] END ..............rf__max_depth=4, rf__n_estimators=500; total time=  32.6s\n",
+            "[CV] END ..............rf__max_depth=4, rf__n_estimators=400; total time=  33.8s\n",
+            "[CV] END ..............rf__max_depth=4, rf__n_estimators=400; total time=  35.0s\n",
+            "[CV] END ..............rf__max_depth=4, rf__n_estimators=400; total time=  31.7s\n",
+            "[CV] END ..............rf__max_depth=4, rf__n_estimators=400; total time=  31.4s\n",
+            "[CV] END ..............rf__max_depth=4, rf__n_estimators=400; total time=  31.5s\n",
+            "Best score:  0.5793882702509077\n",
+            "Best params:  {'rf__max_depth': 5, 'rf__n_estimators': 500}\n"
           ]
         }
       ]
