--- a/trees.ipynb
+++ b/trees.ipynb
@@ -48,7 +48,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kHEXmT02jKEi",
-        "outputId": "513cd675-1c9f-4d2f-e5e4-7f0fab8b93ba"
+        "outputId": "a649239b-3871-4033-86eb-8fe13d0f6570"
       },
       "outputs": [
         {
@@ -96,7 +96,7 @@
           "height": 317
         },
         "id": "u08tSgCSjF4-",
-        "outputId": "3216a62f-a790-4bc0-b39b-67b3d83a0ece"
+        "outputId": "b4287caa-44cd-4e92-a123-e50f0079216a"
       },
       "outputs": [
         {
@@ -156,7 +156,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-87b59968-9b90-4bd2-b6ff-f82be1334214\">\n",
+              "  <div id=\"df-1b4a0059-9121-4012-99cd-5dd777e86e28\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -324,7 +324,7 @@
               "</table>\n",
               "<p>5 rows × 64 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-87b59968-9b90-4bd2-b6ff-f82be1334214')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1b4a0059-9121-4012-99cd-5dd777e86e28')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -375,12 +375,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-87b59968-9b90-4bd2-b6ff-f82be1334214 button.colab-df-convert');\n",
+              "          document.querySelector('#df-1b4a0059-9121-4012-99cd-5dd777e86e28 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-87b59968-9b90-4bd2-b6ff-f82be1334214');\n",
+              "          const element = document.querySelector('#df-1b4a0059-9121-4012-99cd-5dd777e86e28');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -418,7 +418,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5NGndehkjF4_",
-        "outputId": "79289fa3-628d-44de-98e2-0cad564cad27"
+        "outputId": "c75ef506-76a2-4640-97d7-9c5e307c60f1"
       },
       "outputs": [
         {
@@ -453,7 +453,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JtSl-esEZ4pd",
-        "outputId": "2dcacab1-6b13-448b-dd7f-d326122c893f"
+        "outputId": "f0f349a6-cea8-4b05-d405-73659593f27c"
       },
       "execution_count": 7,
       "outputs": [
@@ -479,13 +479,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zA8SMFjrjF5B",
-        "outputId": "35a10ab8-1188-40cd-d314-eda9377ce3f7"
+        "outputId": "3b5224c4-5928-4139-b555-478e5937776e"
       },
       "outputs": [
         {
@@ -493,7 +493,7 @@
           "name": "stdout",
           "text": [
             "Train set AUC: 1.0\n",
-            "Test set AUC: 0.4994318651547124\n"
+            "Test set AUC: 0.5021071947935429\n"
           ]
         }
       ],
@@ -522,12 +522,13 @@
       "source": [
         "# Tuning trees parameters values <br>\n",
         "To tune parameters values GridSearchCV will be used. To prevent data leakage, we'll apply data transformation on each training folder separately. In order to do that, we need to read the datasets created as a result of one-hot encoding of the categorical features, but without other preprocessing steps <br>\n",
+        "Since sklearn implementation of decision trees dosn't handle missing values, missing values are filled using KNN. The standarization step is not required by decision trees themselves, but is needed for KNN.  \n",
         "Also features dtype will be changed from float64 to float32 to speed up computations"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {
         "id": "EqxsdrTDjF5H"
       },
@@ -542,7 +543,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 10,
       "metadata": {
         "id": "tS6F5ZQJjF5I"
       },
@@ -911,8 +912,8 @@
         "id": "5IFIBtLgjF5M"
       },
       "source": [
-        "In result of the first round of cross-validation, models with the highest regularization were selected. Therefore, in the next round we're incresing the regularization. <br>\n",
-        "Also the first round has shown, that changing min_impurity_decrease value from the default doesn't affect models performance. However, in the second round we'll also 0.001 as a values of min_impurity_decrease"
+        "In result of the first round of grid search, models with the most regularized models were selected. Therefore, in the next round the regularization will be increased. <br>\n",
+        "Also the first round has shown, that changing min_impurity_decrease value from the default one doesn't affect models performance. However, in the second round we'll also test 0.001 as a value of min_impurity_decrease"
       ]
     },
     {
@@ -1183,7 +1184,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "nMH3nwbmjF5O",
         "colab": {
@@ -1284,7 +1285,7 @@
         "id": "pUKMsUE_jF5O"
       },
       "source": [
-        "The optimal values of a decision tree's parameters are max_depth=3, min_samples=300. Using these values a disicion tree on the whole dataset will be built."
+        "The optimal values of a decision tree's parameters are max_depth=3, min_samples_leaf=300. Using these values a disicion tree on the whole dataset will be built."
       ]
     },
     {
@@ -1298,7 +1299,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "0xTf_8b8jF5P",
         "colab": {
@@ -1335,7 +1336,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        " AUC for both datasets is 0.5, which means that in both cases the tree predicts the negative category for all observations. At the end, the final model will be built on the whole labeled data (which for now has been splitted into a training and testing sets. So on a larger dataset we may get a larger decision tree. Moreover, the parameters values used in the tree_final were selected as the best ones during cross-validation, which means that on average (on different training and testing datasets) the tree_final model has the highest AUC among other decision trees. <br>\n",
+        " AUC for both datasets is 0.5, which means that in both cases the tree predicts the negative category for all observations. At the end, the final model will be built on the whole labeled data (which for now has been splitted into a training and testing sets). So on a larger dataset we may get a larger decision tree. Moreover, the parameters values used in the tree_final were selected as the best ones during cross-validation, which means that on average (on different training and testing datasets) the tree_final model has the highest AUC among other decision trees. <br>\n",
         " To get higher quality of predictions, more complicated models will be used."
       ],
       "metadata": {
@@ -1365,9 +1366,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oIqSIaXPWRT2",
-        "outputId": "f257d1e0-f995-45fd-818f-490eaaba004f"
+        "outputId": "cb3795c6-cfe2-442a-df94-0c936ea97639"
       },
-      "execution_count": 20,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -1382,7 +1383,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "As before, we've got AUC = 1 on the training set and AUC = 0 on the test set. In order to achieve better results, GridSearchCV will be used"
+        "AUC equals 1 on the training set and 0.5 on the test set. In order to achieve better results, GridSearchCV will be used. As before, the pipeline hasa scaling step (needed for KNN), KNN for imputing missing values and a classifier"
       ],
       "metadata": {
         "id": "S9yI4K1JXX34"
@@ -1411,7 +1412,7 @@
       "metadata": {
         "id": "W5bW903AXwB0"
       },
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -1448,7 +1449,7 @@
         "id": "gTchMHxsX8Js",
         "outputId": "9273356e-aacf-49f8-af86-171c446da7c9"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "metadata": {
@@ -1602,6 +1603,16 @@
     {
       "cell_type": "markdown",
       "source": [
+        "As a result of the first round of grid search, the minimum values for max_depth and min_samples_split were chosen. Also the highest number of decision trees were used in the best model.<br>\n",
+        "Therefore, at the second round the number of estimators was increased and other values for max_depth were tested."
+      ],
+      "metadata": {
+        "id": "375varKDE_YL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Round 2"
       ],
       "metadata": {
@@ -1632,7 +1643,7 @@
         "id": "MYyJqjVbYy4A",
         "outputId": "155d1cc1-b62d-427f-8071-0dff241633ac"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1693,6 +1704,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "The optimal parameters values for the first and the second rounds are the same. At the third round [7, 6, 5, 4] will be tested as values of the max_depth parameter. We'll use randof forests, which consist of 750, 500 or 400 decision trees."
+      ],
+      "metadata": {
+        "id": "ubModUmNF1Ku"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Round 3"
       ],
       "metadata": {
@@ -1723,7 +1743,7 @@
         "id": "4BelicZNk-V4",
         "outputId": "421f308c-9699-4d50-f7d5-d181a0fe7244"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1797,6 +1817,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "uOY5EMpRGhXH"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         ""
@@ -1812,6 +1841,7 @@
     "colab": {
       "name": "trees.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
