--- a/trees.ipynb
+++ b/trees.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 14,
       "metadata": {
         "id": "DIsE6ermjF45"
       },
@@ -32,6 +32,7 @@
         "import matplotlib.pyplot as plt\n",
         "from sklearn.tree import DecisionTreeClassifier\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.ensemble import AdaBoostClassifier\n",
         "from sklearn.model_selection import GridSearchCV\n",
         "from sklearn.pipeline import Pipeline\n",
         "from sklearn.compose import ColumnTransformer\n",
@@ -1285,7 +1286,7 @@
         "id": "pUKMsUE_jF5O"
       },
       "source": [
-        "The optimal values of a decision tree's parameters are max_depth=3, min_samples_leaf=300. Using these values a disicion tree on the whole dataset will be built."
+        "The optimal values of a decision tree's parameters are max_depth=3, min_samples_leaf=300."
       ]
     },
     {
@@ -1356,7 +1357,7 @@
       "cell_type": "code",
       "source": [
         "rf_baseline = RandomForestClassifier(random_state=0)\n",
-        "rf_baseline.fit(X_train, np.ravel(y_train))\n",
+        "rf_baseline.fit(X_train, y_train)\n",
         "\n",
         "print(\"Train set AUC: {}\".format(roc_auc_score(y_train, rf_baseline.predict(X_train))))\n",
         "print(\"Test set AUC: {}\".format(roc_auc_score(y_test,  rf_baseline.predict(X_test))))"
@@ -1704,7 +1705,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The optimal parameters values for the first and the second rounds are the same. At the third round [7, 6, 5, 4] will be tested as values of the max_depth parameter. We'll use randof forests, which consist of 750, 500 or 400 decision trees."
+        "The optimal parameters values for the first and the second rounds are the same. In the third round [7, 6, 5, 4] will be tested as values of the max_depth parameter. We'll use random forests consisting of 750, 500 or 400 decision trees."
       ],
       "metadata": {
         "id": "ubModUmNF1Ku"
@@ -1819,11 +1820,100 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "Based on three round of grid search, we can conclude, that the optimal parameters of a random forest are max_depth=5, n_estimators=500"
       ],
       "metadata": {
         "id": "uOY5EMpRGhXH"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Baseline AdaBoost model"
+      ],
+      "metadata": {
+        "id": "G7pDKgJPL2XN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ada_baseline = AdaBoostClassifier(DecisionTreeClassifier(random_state=42),\n",
+        "                                 random_state=42)\n",
+        "ada_baseline.fit(X_train, y_train)\n",
+        "\n",
+        "print(\"Train set AUC: {}\".format(roc_auc_score(y_train, ada_baseline.predict(X_train))))\n",
+        "print(\"Test set AUC: {}\".format(roc_auc_score(y_test,  ada_baseline.predict(X_test))))"
+      ],
+      "metadata": {
+        "id": "WP8R0pzUKxIR",
+        "outputId": "4362db15-03d0-4ff6-b5f6-baed32710970",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Train set AUC: 1.0\n",
+            "Test set AUC: 0.5026381271066188\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Tuning AdaBoost parameters values"
+      ],
+      "metadata": {
+        "id": "OnJSG-o0Niup"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pipe = Pipeline([\n",
+        "    ('transformer', ColumnTransformer([\n",
+        "        ('scaler', StandardScaler(), [*range(0, 19)])],\n",
+        "         remainder='passthrough')),\n",
+        "    ('imputer', KNNImputer()),\n",
+        "    ('ada', AdaBoostClassifier(DecisionTreeClassifier(random_state=42),\n",
+        "                               random_state=42))\n",
+        "])"
+      ],
+      "metadata": {
+        "id": "zaIfq3ukNiAr"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "param_grid = {\n",
+        "    'ada__learning_rate': [0.1, 0.5, 0.75, 1],\n",
+        "    'ada__n_estimators': [50, 100, 250],\n",
+        "    'ada__base_estimator__max_depth': [None, 10, 5]\n",
+        "}\n",
+        "\n",
+        "grid = GridSearchCV(pipe, param_grid, cv=5,\n",
+        "                    scoring='roc_auc',\n",
+        "                    verbose=2)\n",
+        "\n",
+        "grid.fit(X_train_dummies, y_train)\n",
+        "\n",
+        "print('Best score: ', grid.best_score_)\n",
+        "print('Best params: ', grid.best_params_)"
+      ],
+      "metadata": {
+        "id": "H4VkXwUeOPhb"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1831,7 +1921,7 @@
         ""
       ],
       "metadata": {
-        "id": "rzzv9KFZyqbf"
+        "id": "xSVgLIxUSKdG"
       },
       "execution_count": null,
       "outputs": []
